on docs and version

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -8,7 +8,6 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -60,36 +59,36 @@ title: 4. Exploration of the Formative Learning Design Process
             playground](#addressing-complexity-of-code-environment-with-code-playground)
     -   [Design choices of the half-baked
         template](#design-choices-of-the-half-baked-template)
-        -   [Quick Start Cards](#quick-start-cards)
-    -   [Design behaviours encouraged through use of game
-        template](#design-behaviours-encouraged-through-use-of-game-template)
-        -   [Variable editing for
-            movement:](#variable-editing-for-movement)
-        -   [Level design and
-            prototyping:](#level-design-and-prototyping)
-        -   [Use of pixel art to seed narrative and art
-            creativity:](#use-of-pixel-art-to-seed-narrative-and-art-creativity)
+        -   [Design behaviours encouraged through use of game
+            template](#design-behaviours-encouraged-through-use-of-game-template)
+        -   [Introducing the quick start
+            cards](#introducing-the-quick-start-cards)
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
 -   [4. Participant conflict due to lack of relevant technical
     support](#participant-conflict-due-to-lack-of-relevant-technical-support)
+    -   [Linear and stand-alone tutorial and code snippet
+        resources](#linear-and-stand-alone-tutorial-and-code-snippet-resources)
     -   [Tensions and related to navigation of various documentations
         sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
--   [Conclusion](#conclusion)
-    -   [Summary of barriers exposed in this study
-        -](#summary-of-barriers-exposed-in-this-study--)
-    -   [Discussion on the emergent (and mutual) nature of the design
-        (and research?)
-        process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-research-process.)
+    -   [Using of a collection of game design
+        patterns](#using-of-a-collection-of-game-design-patterns)
+    -   [Tactical structuring of the pattern
+        collection](#tactical-structuring-of-the-pattern-collection)
+-   [Discussion of design issues](#discussion-of-design-issues)
+    -   [Summary of barriers and tensions explored in this
+        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
     -   [Discussion on Authenticity of
         Tools](#discussion-on-authenticity-of-tools)
-        -   [Authentic tool use and instrumental
-            agency](#authentic-tool-use-and-instrumental-agency)
-    -   [Analysis in relation to existing research on related design
-        toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
-        -   [Comparing design to Scratch and
-            Microworlds](#comparing-design-to-scratch-and-microworlds)
+        -   [Analysis in relation to existing research on related design
+            toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
+        -   [Comparing my design to Scratch and
+            Microworlds](#comparing-my-design-to-scratch-and-microworlds)
+        -   [Conclusion on authenticity](#conclusion-on-authenticity)
+    -   [On the emergent and mutual nature of the design and research
+        process AND link to
+        agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
     -   [Link to next chapter](#link-to-next-chapter)
 
 ## Research Questions - June 2023
@@ -160,8 +159,8 @@ Saskia Leggett is a researcher who was active in the in Creative Family Learning
 **Summary of themes emerging**
 
 In my analysis, I have proritised data which in forms the first research question and specifically addressing barriers and tensions for both practitioners and participants which exist in this domain of activity.
-NOTE - REVIEW THIS BASED ON THEORETICAL LANGUAGE - PERHAPS OBSTACLES, CONTRADICTIONS, TENSIONS AND INTERVENTIONS.
 
+<!-- NOTE - REVIEW THIS BASED ON THEORETICAL LANGUAGE - PERHAPS OBSTACLES, CONTRADICTIONS, TENSIONS AND INTERVENTIONS. -->
 
 
 _Table of initial data_
@@ -761,7 +760,7 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 ## 3. Participant conflict due to lack of access and familiarity to tools
 
-**Nature of conflict - unfamilairity with tools- complexity of processes leading to frustration**
+**Nature of conflict - unfamiliarity with tools- complexity of processes leading to frustration**
 
 This conflict, which surfaced in P1, was a  conflation of various tension which stemmed from lack of computer coding ability and lack of access to relevant tools.
 
@@ -770,7 +769,7 @@ While tensions between lack of knowledge in how to undertake activities are comm
 
 ### Motivations around in choice of toolset
 
-One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processess in learning environments are explored in the literature review. A brief summarying being: similarirty to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience. FIND CITATION PBL?
+One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience. FIND CITATION PBL?
 
 While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools.
 
@@ -799,7 +798,7 @@ In journal notes and in video data I observed participants developing responses 
 
 ##### Why not Scratch? - differences in terms of tool set
 
-As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch. While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well reseached and partly to prioritise authenticity of tool set despite the removal of certain technical barriers offered by such a self-contained tools set.  
+As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch. While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set despite the removal of certain technical barriers offered by such a self-contained tools set.  
 
 <!-- In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended. -->
 <!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
@@ -807,7 +806,7 @@ As explored in the literature review, an extensive body of research on the desig
 
 In P1, I used a variety of graphical and audio tools including:  Piskel to create sprite characters; Scratch to create backgrounds; Audacity and freesound.org record and edit audio for effects; Sonic Pi for background music; and Bxr online tool for sound effects. Participants would then save assets in a compatible format, upload them to the code playground, and link the file using a line of code.
 
-In Scatch there are tabs which host simplified graphical and audio studios. Design decisions priorise ease of use and the ability to record audio right into the program. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data. Hoewver, to justify this choice, I observered a palpable a sense of achievement when participants suceeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty involved.
+In Scatch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data. However, to justify this choice, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty involved.
 
 <!-- The difference in friction to adding assets is significant and the possibilities for it to go wrong also great.  -->
 
@@ -860,9 +859,7 @@ Other parents requested additional supporting resources which explained the codi
 
 To address confusion about how to being coding a game, I introduced a working code example as a starter game template using the phaser library.
 
-The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop. The template was based on a prominent tutorial on the phaser website, one I had completed in preparation for the sessions, called _Making your first game_ [^1]. To use it as a template I adapted it by removing out un-needed code with a focus on simplifying the structure and readability.
-
-
+The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop. The template was based on a prominent tutorial on the phaser website to create a two-dimensional platformer game[^1]. I adapted the final game, removing out code with a focus on simplifying the structure and readability.
 
 In the domain of web technology, starter templates consist of pre-built collections of HTML, Javascript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
 
@@ -921,12 +918,9 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 #### Design behaviours encouraged through use of game template
 
-
 While the focus on this chapter is on design and designs decisions, the following sections include rough analysis of the impact of them. Fuller analysis follows in chapters five and six. To do this, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
 
 <!-- NOTE - HOW MUCH ON IMPACT? HOW MUCH IN CH5? -->
-
-
 
 that had a high impact on the game experiences. These include changing gravity, altering the player speed, background colour of the game and the game layout of the platforms, hazards and food to collect.
 
@@ -968,12 +962,9 @@ At the end of P1 trainee teachers created printable resources that highlighted p
 ![](./Pictures/quickstart_phaser_1.png){width=50%}
 4.x - Example of a Quick start card
 
-
 <!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
 
 The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I created these resources and the corresponding code structures to facilitate a _quick start_, the diversity of experience kept some participants extended periods of time.
-
-
 
 #### Observations on design behaviours encouraged through use of game template
 
@@ -983,7 +974,7 @@ While the simple changes to the game dynamics and patterns embedded in the start
 
   A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning.
 
-At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns mosst closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
+At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
 
 Instead analysis of the video data of participants reveals a large number of broader digital literacy skills involved in certain processes. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learnign a complex chain of  these individual actions.
 
@@ -1023,19 +1014,38 @@ DEVELOP THIS SECTION -->
 
 **Nature of conflict - Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating**
 
-While tensions between lack of knowledge in how to undertake activities are common in learning environments, the informal nature of this learning setting made most classroom approaches unsuitable.
+A key conflict in the overall activity system was the inability for participants to make progress on their game due to lack of working processes and domain knowledge. To address this, in P1 I tried undertaking class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable.
 
-**Linear and stand-alone tutorial and code snippet resources**
+As outlined above, my model emerged with similarities t the UMC approach. While the starter template and quick activities served to address the _use_ and _modify_ stages, the _create_ stage required additional documentation as there were not enough facilitators to help participants with their individual choices of what to add to the game. This section outlines the evolutions and design choices informing the different forms of supporting documentation used.  
+
+SHIFT? - It is notable that the create stage of this model does not involve starting a totally new game from scratch as is imagined in some interpretations of that model. Due to the complexity of the code base and framework the process of creating a new GDP within the game as a suitable level of challenge.
+
+#### Linear and stand-alone tutorial and code snippet resources
 
 <!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided by Mozilla and the Phaser developers. -->
 
-To support a hands-on approach responsive the design choices of participatns, I began by creating discreet code examples illustrating the requested elements in a minimal working game. As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices. As with many developer created documentation, focused on demonstrating the code constructs in isolation rather than in the context of any particular game.
+To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements.
 
-So instead, I began each code snippet with a very stripped down version of the starting 2D platformer game template and added the code examples within this code framework. My rationale was that each pattern added builds familiarity with the code structure. feedback from P1 and video evidence as in Toby's proficiency supports this observation.
+As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice.
 
-For each code example I created a text based step-by-step  documentation.  While the collection of tutorials took the form of chapters of an online book, readers were encouraged to tackle them in any order. In practice each chapter was printed out for participants and linked to from the list of code examples. Thus rather than choosing a defined order readers could choose which order they wanted to add game elements. The extract outlining the use of physical maps shows an example of a Roxanne(p) helping a Richie(c) find a code tutorial to follow based on child's interests.
+These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices.
 
-While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context.
+In P1, I had encouraged the use of existing resources via google searches and searching developer resources the Phaser examples [^11]. The introduction of this process caused significant additional tensions and confusions. As with many developer created documentation, focused on demonstrating the code constructs in isolation rather than in the context of any particular game. In addition, any varience of
+
+Initially, I try to counter this by creating one off documents withthe reelvant code which needed to be copied and pasted into their game[^12]. This seemed also unsatisfactory.
+
+Instead I began to create code snippets which shared the struture of starter game template and added only the code needed for the additional requested functionality. .
+
+My rationale was that each pattern added builds familiarity with the code structure. feedback from P1 and video evidence as in Toby's proficiency supports this observation.
+
+For each code example I created a text based step-by-step documentation. Each guide was printed out for sessions and readers were encouraged to tackle them in any order. The extract outlining the use of physical maps above shows an example of a Roxanne(p) helping a Richie(c) find a code tutorial to follow based on child's interests.
+
+As the programme developed I took greater care over the form of the tutorials and started to collect them into a collection of chapters of an online book.
+
+<!-- BELOW Initially I structured the book chapter participants working their way through the online resources. HOW -->
+
+
+<!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
 
 While prioritising a responsive, informal, hands-on approach over pre-teaching concepts, I struggled to resolve how best to provide background concepts and explanations of coding constructs, a need which had arisen from parents in the feedback to P1 (see appendix 4.x).
 
@@ -1060,12 +1070,13 @@ Interestingly, the online menus was not used by participants in any regular or c
 <!-- As explored in the literature review, it is difficult to explore this pedagogical approach relation to other similar programmes due to the lack of data on specifics of the learning materials presented to participants. -->
 
 #### Tensions and related to navigation of various documentations sources
+EDIT DOWN - WHAT IS THE KEY PURPOSE OF THIS BIT?
 
 The previous stage had created a variety of supporting documents and processes. However at the start of P3 I still had not managed to devise a system to communicate these options consistently and effectively to students. My initial attempts were a list of code examples in a shared google document and printed out self-contained chapters.
 
 Thus, there were two main ways of approaching adding a new pattern. One to examine a code example which was built around the same code base. This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code. It is this approach that we see the child Toby adopt in the vignette presented in this chapter. The second approach was to use the longer form step by step help.
 
-**Using of a collection of game design patterns**
+#### Using of a collection of game design patterns
 
 While the code snippet and text resources were developed in response to one conflict they introduced new tensions. Specifically, I observed users failing or struggling to find the right resources online. I addressed this by printing step by step tutorials. However the paper based resources did not allow users to copy and paste code, a  characteristic of online code examples and tutorials which facilitates quick progress.
 
@@ -1076,7 +1087,7 @@ Learning resources linked to game design patterns were presented in a grid forma
 My motivations driving this design work were to mitigate potential learner alienation from unfamiliar technical documentation through accessible and attractive design and to relating documentation to participants existing gameplay experience.
 
 
-**Tactical structuring of the pattern collection**
+#### Tactical structuring of the pattern collection
 
 In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements.
 
@@ -1392,3 +1403,6 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^8]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
 [^9]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
 [^10]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
+[^11]: https://phaser.io/examples/v2
+Example of code in google docs
+[^12]:https://docs.google.com/document/d/1zUw4xpWT9p2LIqTaZdVN0JRpShvVFG3UQqmsxRriE6s/edit?pli=1
