--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -49,34 +49,34 @@
             playground](#addressing-complexity-of-code-environment-with-code-playground)
     -   [Design choices of the half-baked
         template](#design-choices-of-the-half-baked-template)
-        -   [Quick Start Cards](#quick-start-cards)
-    -   [Design behaviours encouraged through use of game
-        template](#design-behaviours-encouraged-through-use-of-game-template)
-        -   [Variable editing for
-            movement:](#variable-editing-for-movement)
-        -   [Level design and
-            prototyping:](#level-design-and-prototyping)
-        -   [Use of pixel art to seed narrative and art
-            creativity:](#use-of-pixel-art-to-seed-narrative-and-art-creativity)
+        -   [Design behaviours encouraged through use of game
+            template](#design-behaviours-encouraged-through-use-of-game-template)
+        -   [Introducing the quick start
+            cards](#introducing-the-quick-start-cards)
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
 -   [4. Participant conflict due to lack of relevant technical
     support](#participant-conflict-due-to-lack-of-relevant-technical-support)
+    -   [Linear and stand-alone tutorial and code snippet
+        resources](#linear-and-stand-alone-tutorial-and-code-snippet-resources)
     -   [Tensions and related to navigation of various documentations
         sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
--   [Conclusion](#conclusion)
-    -   [Summary of barriers exposed in this study
-        -](#summary-of-barriers-exposed-in-this-study--)
-    -   [Discussion on the emergent (and mutual) nature of the design
-        (and research?)
-        process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-research-process.)
+    -   [Using of a collection of game design
+        patterns](#using-of-a-collection-of-game-design-patterns)
+    -   [Tactical structuring of the pattern
+        collection](#tactical-structuring-of-the-pattern-collection)
+-   [Discussion of design issues](#discussion-of-design-issues)
+    -   [Summary of barriers and tensions explored in this
+        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
     -   [Discussion on Authenticity of
         Tools](#discussion-on-authenticity-of-tools)
-        -   [Authentic tool use and instrumental
-            agency](#authentic-tool-use-and-instrumental-agency)
-    -   [Analysis in relation to existing research on related design
-        toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
-        -   [Comparing design to Scratch and
-            Microworlds](#comparing-design-to-scratch-and-microworlds)
+        -   [Analysis in relation to existing research on related design
+            toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
+        -   [Comparing my design to Scratch and
+            Microworlds](#comparing-my-design-to-scratch-and-microworlds)
+        -   [Conclusion on authenticity](#conclusion-on-authenticity)
+    -   [On the emergent and mutual nature of the design and research
+        process AND link to
+        agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
     -   [Link to next chapter](#link-to-next-chapter)
